2022-10-27T01:59:06Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3333928149 # 172
* notice: last 14d: unq all: 2 28
* notice: prev accum: outdated-unq outdated-all / unq all: 61 193 / 77 222
* notice: next accum: outdated-unq outdated-all / unq all: 62 195 / 77 223
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-10-12] / []

2022-10-26T16:30:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3330818531 # 171
* notice: last 14d: unq all: 2 29
* notice: prev accum: outdated-unq outdated-all / unq all: 61 193 / 77 222
* notice: next accum: outdated-unq outdated-all / unq all: 61 193 / 77 222
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-10-12 2022-10-26]

2022-10-26T08:26:51Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3327385976 # 170
* notice: last 14d: unq all: 2 29
* notice: prev accum: outdated-unq outdated-all / unq all: 61 193 / 76 221
* notice: next accum: outdated-unq outdated-all / unq all: 61 193 / 77 222
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-10-26]

2022-10-26T02:01:13Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3325634770 # 169
* notice: last 14d: unq all: 2 28
* notice: prev accum: outdated-unq outdated-all / unq all: 60 191 / 76 220
* notice: next accum: outdated-unq outdated-all / unq all: 61 193 / 76 221
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-10-11] / []

2022-10-25T16:42:32Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3322732421 # 168