@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-10-27T01:59:06Z",
+  "timestamp" : "2022-10-27T08:26:46Z",
   "count_outdated" : 195,
   "uniques_outdated" : 62,
   "count" : 223,
-  "uniques" : 77,
+  "uniques" : 78,
   "clones" : [
     {
       "timestamp": "2022-10-13T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -100,6 +100,13 @@
       "timestamp": "2022-10-26T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-27T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
