@@ -1,3 +1,11 @@
+2022-10-27T08:26:46Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3335749712 # 173
+* notice: last 14d: unq all: 2 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 62 195 / 77 223
+* notice: next accum: outdated-unq outdated-all / unq all: 62 195 / 78 223
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-10-13 2022-10-27]
+
 2022-10-27T01:59:06Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3333928149 # 172
 * notice: last 14d: unq all: 2 28
